@@ -1,17 +1,17 @@
 package uk.gov.hmcts.ccd;
 
+import lombok.Getter;
 import org.springframework.beans.factory.annotation.Value;
 import uk.gov.hmcts.ccd.endpoint.exceptions.ServiceException;
 
-import javax.inject.Named;
-import javax.inject.Singleton;
+import jakarta.inject.Named;
+import jakarta.inject.Singleton;
 import java.io.UnsupportedEncodingException;
 import java.net.URLEncoder;
+import java.nio.charset.StandardCharsets;
 import java.time.Duration;
 import java.util.Base64;
 import java.util.List;
-
-import static java.util.stream.Collectors.toList;
 
 @Named
 @Singleton
@@ -73,6 +73,12 @@ public class ApplicationParams {
 
     @Value("${ccd.user-profile.host}")
     private String userProfileHost;
+
+    @Value("${case_document_am.url}")
+    private String caseDocumentAmUrl;
+
+    @Value("${document.sanitiser.case-document-am-api.enabled}")
+    private boolean documentSanitiserCaseDocumentAMEnabled;
 
     @Value("${ccd.document.url.pattern}")
     private String documentURLPattern;
@@ -182,6 +188,9 @@ public class ApplicationParams {
     @Value("${enable-case-users-db-sync}")
     private boolean enableCaseUsersDbSync;
 
+    @Value("#{'${ccd.upload-timestamp-featured-case-types}'.split(',')}")
+    private List<String> uploadTimestampFeaturedCaseTypes;
+
     @Value("${audit.log.enabled:true}")
     private boolean auditLogEnabled;
 
@@ -227,6 +236,23 @@ public class ApplicationParams {
     @Value("${search.internal.case-access-metadata.enabled}")
     private boolean internalSearchCaseAccessMetadataEnabled;
 
+    @Value("${enable-case-group-access-filtering}")
+    private boolean enableCaseGroupAccessFiltering;
+
+    @Value("#{'${ccd.callback.passthru-header-contexts}'.split(',')}")
+    private List<String> callbackPassthruHeaderContexts;
+
+    @Value("#{'${case.data.exclude.verifyaccess.casetype.validate}'.split(',')}")
+    private List<String> excludeVerifyAccessCaseTypesForValidate;
+
+    @Getter
+    @Value("${validation.dynamic-list.code-max-length}")
+    private Integer validationDynamicListCodeMaxLength;
+
+    @Getter
+    @Value("${validation.dynamic-list.value-max-length}")
+    private Integer validationDynamicListValueMaxLength;
+
     public static String encode(final String stringToEncode) {
         try {
             return URLEncoder.encode(stringToEncode, "UTF-8");
@@ -236,11 +262,7 @@ public class ApplicationParams {
     }
 
     public static String encodeBase64(final String stringToEncode) {
-        try {
-            return Base64.getEncoder().encodeToString(stringToEncode.getBytes("UTF-8"));
-        } catch (UnsupportedEncodingException e) {
-            throw new ServiceException(e.getMessage());
-        }
+        return Base64.getEncoder().encodeToString(stringToEncode.getBytes(StandardCharsets.UTF_8));
     }
 
     public List<String> getAuthorisedServicesForCaseUserRoles() {
@@ -381,6 +403,14 @@ public class ApplicationParams {
         return callbackRetries;
     }
 
+    public String getCaseDocumentAmUrl() {
+        return caseDocumentAmUrl;
+    }
+
+    public boolean isDocumentSanitiserCaseDocAMEnable() {
+        return documentSanitiserCaseDocumentAMEnabled;
+    }
+
     public String getDocumentURLPattern() {
         return documentURLPattern;
     }
@@ -446,7 +476,8 @@ public class ApplicationParams {
     }
 
     public List<String> getElasticSearchDataHosts() {
-        return elasticSearchDataHosts.stream().map(quotedHost -> quotedHost.replace("\"", "")).collect(toList());
+        return elasticSearchDataHosts.stream().map(quotedHost ->
+            quotedHost.replace("\"", "")).toList();
     }
 
     public Boolean isElasticsearchNodeDiscoveryEnabled() {
@@ -601,19 +632,31 @@ public class ApplicationParams {
         return requestScopeCachedCaseTypes;
     }
 
-    public Integer getRequestScopeCachedCaseTypesFromHour() {
-        return requestScopeCachedCaseTypesFromHour;
-    }
-
-    public Integer getRequestScopeCachedCaseTypesTillHour() {
-        return requestScopeCachedCaseTypesTillHour;
-    }
-
     public Integer getSystemUserTokenCacheTTLSecs() {
         return systemUserTokenCacheTTLSecs;
     }
 
     public boolean getInternalSearchCaseAccessMetadataEnabled() {
         return internalSearchCaseAccessMetadataEnabled;
+    }
+
+    public boolean getCaseGroupAccessFilteringEnabled() {
+        return this.enableCaseGroupAccessFiltering;
+    }
+
+    public void setCaseGroupAccessFilteringEnabled(boolean enableCaseGroupAccessFiltering) {
+        this.enableCaseGroupAccessFiltering = enableCaseGroupAccessFiltering;
+    }
+
+    public List<String> getCallbackPassthruHeaderContexts() {
+        return callbackPassthruHeaderContexts;
+    }
+
+    public List<String> getUploadTimestampFeaturedCaseTypes() {
+        return uploadTimestampFeaturedCaseTypes;
+    }
+
+    public List<String> getExcludeVerifyAccessCaseTypesForValidate() {
+        return excludeVerifyAccessCaseTypesForValidate;
     }
 }
